Customer Vehicle Speed & Alert API
