# routes/api.php
@@ -56,6 +56,7 @@ Route::middleware('auth:sanctum')->group(function () {
         Route::post('update-password', [DashboardController::class, 'updatePassword']);
         Route::apiResource('customer-vehicles', CustomerVhicleController::class);
         Route::post('vehicle-update', [CustomerVhicleController::class, 'vehicleUpdate']);
+        Route::get('customer-vehicles-speed-alert-setting', [CustomerVhicleController::class, 'vehicleSpeedSetting']);
         Route::get('customer-vehicles-speed-limitation/{id}', [CustomerVhicleController::class, 'speedLimitation']);
         Route::post('customer-vehicles-speed-limitation', [CustomerVhicleController::class, 'speedLimitationUpdate']);
         Route::get('customer-vehicles-alert-setting/{id}', [CustomerVhicleController::class, 'vehicleAlertSetting']);
