# storage/api-docs/api-docs.json
@@ -1204,6 +1204,36 @@
                 ]
             }
         },
+        "/api/customer/customer-vehicles-speed-alert-setting": {
+            "get": {
+                "tags": [
+                    "customer-vehicles-speed-alert-setting"
+                ],
+                "summary": "Get Customer Vehicle Speed & Alert Info",
+                "description": "",
+                "operationId": "customer-vehicles-speed-alert-setting",
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "additionalProperties": {
+                                        "type": "integer",
+                                        "format": "int32"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer token": []
+                    }
+                ]
+            }
+        },
         "/api/customer/profile": {
             "get": {
                 "tags": [
